:ledger: docs(0.8.0.md): Finish adding major updates to 0.8.0 release notes

--- a/cirrus-docs-next/static/markdown/0.8.0.md
+++ b/cirrus-docs-next/static/markdown/0.8.0.md
@@ -1,7 +1,110 @@
 ##### 🎉 Features
 
 - Major rewrite of class generation system.
-    - New `` utilities
+- New utility mixins to replace old ones:
+    - `generator.utility` -> `generator_v2.utility`
+    - `generator.utility-with-body` -> `generator_v2.utility-with-body`
+- Class generator now supports class grouping via `group:[pseudo]` and `group-[pseudo]` CSS classes. These allow developers to use events on a parent element to affect the styles of child elements.
+
+```scss
+@include generator_v2.utility(
+    $base-class-name: 'text',
+    $class-value-pairs: (
+        'blue': (
+            'color': blue,
+        ),
+    ),
+    $variants: (
+        'group-hover'
+    ),
+    $generate-viewports: true,
+    $override: '!important'
+);
+```
+
+```css
+.group:hover .group-hover\:u-text-blue {
+    color: blue !important;
+}
+
+...
+```
+
+```html
+<div class="group">
+    <p>test</p>
+    <div class="group-hover:u-text-blue">
+        <p>this is blue on hover</p>
+        <p>this is also blue on hover</p>
+    </div>
+</div>
+```
+
+- Class generator now supports many more variants (pseudos):
+  - 'responsive',
+  - 'dark', 'light',
+  - 'reduce-motion',
+  - 'selection-hover',
+  - 'expand',
+  - 'first-of-type',
+  - 'last-of-type',
+  - 'portrait', 'landscape',
+  - 'hover', 'group-hover',
+  - 'focus', 'group-focus', 'focus-visible', 'focus-within',
+  - 'active',
+  - 'visited',
+  - 'checked',
+  - 'disabled'
+
+```scss
+@include generator_v2.utility(
+    $base-class-name: 'text',
+    $class-value-pairs: (
+        'blue': (
+            'color': blue,
+        ),
+    ),
+    $variants: (
+        'dark',
+        'hover',
+        'reduce-motion',
+        'group-hover',
+        'group-focus',
+    ),
+    $generate-viewports: true,
+    $override: '!important'
+);
+```
+
+```css
+.u-text-blue {
+    color: blue !important;
+}
+
+.hover\:u-text-blue:hover {
+    color: blue !important;
+}
+
+.group:hover .group-hover\:u-text-blue {
+    color: blue !important;
+}
+
+.group:focus .group-focus\:u-text-blue {
+    color: blue !important;
+}
+
+@media screen and (min-width: 640px) {
+    .sm\:u-text-blue {
+        color: blue !important;
+    }
+
+    .sm\:hover\:u-text-blue:hover {
+        color: blue !important;
+    }
+
+...
+```
+
 - Update grid class utilities to support generation with viewports and modifiers [b3be15f](https://github.com/Spiderpig86/Cirrus/commit/b3be15f8cc05311176c167f1047676d0c426b5be)
 - Enable hover pseudo selector for v2 colors [839cd47](https://github.com/Spiderpig86/Cirrus/commit/839cd47baec8c76567dc0136c60c3a7081231738#diff-2be740eb6ef25e141bd74e2ce850db08d2a30ba64f5e58ad333f1b7f2a2c4f87)
 - Add custom button behaviors for v1 color classes (only apply on button selectors and add hover behavior) [d4a6b6a](https://github.com/Spiderpig86/Cirrus/commit/d4a6b6a73444b04c25f08a2055fd32fda7d04a83)
@@ -23,8 +126,12 @@
 
 ##### 💥 Breaking Changes
 
-- New viewport syntax across all classes that support different viewports, unifying the fractured viewport system.
-    - TODO
+- New viewport syntax across all classes that support different viewports, unifying the fractured viewport system. 
+    - The main difference from before is now all viewport modifiers will use the same syntax instead of inconsistent system from before. All classes that are meant to apply at a certain viewport size and above will be in the form of `[sm|md|lg|xl]:classname`. This will be the case for all classes whether it is for columns or utility classes.
+    - Below are the main syntax changes:
+        - `col-sm-1` -> `sm:col-1` - column classes will all have the viewport modifier prefixed at the front.
+        - `col-6` -> `md:col-6` - all column classes that did not have the modifier class must be prefixed with `md:` to get the same behavior as before. This is to address the confusing implicit behavior where a class like `col-6` would have 50% width for `md` and above but 100% width for viewports below `md`.
+        - `u-block-md` -> `md:u-block` - for all utility classes, the viewport modifier will be prefixed at the front.
 - Deprecated `margin:1 rem 0;` style for `p, article, blockquote` since it leads to unexpected behaviors for users [9bcda3a](https://github.com/Spiderpig86/Cirrus/commit/9bcda3a4f1351aa4f4fe9736c473768e62fabc31)
 - Deprecating row.no-space classes [8e802f9](https://github.com/Spiderpig86/Cirrus/commit/8e802f923df81d2e611c670f13fa175a1bf4c79f#diff-28c9e4afc4df9ed98a503dd39511da564502d2be96a5e8cd8f80b2ba096edf1e)
 - Update Modal class names for clarity [9da499f](https://github.com/Spiderpig86/Cirrus/commit/9da499f60e3f3f818cf8ccba628fb89dbcb85727)
