:ledger: docs(0.8.0.md): Update release notes

--- a/cirrus-docs-next/static/markdown/0.8.0.md
+++ b/cirrus-docs-next/static/markdown/0.8.0.md
@@ -123,6 +123,8 @@
 - Add missing grid-row styles `grid-rows-`, `grid-r-`, `grid-rs-`, and `grid-re-` [1295016](https://github.com/Spiderpig86/Cirrus/commit/12950165240b1d53cc4a3e803155759cde1de50f#diff-bcee8f5354ad9844acbf1140b90dbdb15e5793f65ec20bdc6c5d737687fb6346)
 - Fix grid row column style [c95fe41](https://github.com/Spiderpig86/Cirrus/commit/c95fe41cade7d0b6a5cb4ce41cd6d23c941f39cf#diff-bcee8f5354ad9844acbf1140b90dbdb15e5793f65ec20bdc6c5d737687fb6346)
 - Link font weight and color adjustments no longer apply on nested input elements [a6b5e25](https://github.com/Spiderpig86/Cirrus/commit/a6b5e256210d24fc014bad504ddbb85b18959c6a#diff-f6186573c0b149acb95d8b889d6da98865c652fbc2da9fadc20a5edd0c557a6d)
+- Remove background color from avatar when there is a child image element [7d4ea82](https://github.com/Spiderpig86/Cirrus/commit/7d4ea82fe6b5d30862d98e48dab4130ff18f4d46)
+- Fix text color with a tag and `.btn` class [c1c7fa5](https://github.com/Spiderpig86/Cirrus/commit/c1c7fa560c7af168ef31d770b3aaeb04936c5a4a)
 
 ##### 💥 Breaking Changes
 
@@ -135,4 +137,6 @@
 - Deprecated `margin:1 rem 0;` style for `p, article, blockquote` since it leads to unexpected behaviors for users [9bcda3a](https://github.com/Spiderpig86/Cirrus/commit/9bcda3a4f1351aa4f4fe9736c473768e62fabc31)
 - Deprecating row.no-space classes [8e802f9](https://github.com/Spiderpig86/Cirrus/commit/8e802f923df81d2e611c670f13fa175a1bf4c79f#diff-28c9e4afc4df9ed98a503dd39511da564502d2be96a5e8cd8f80b2ba096edf1e)
 - Update Modal class names for clarity [9da499f](https://github.com/Spiderpig86/Cirrus/commit/9da499f60e3f3f818cf8ccba628fb89dbcb85727)
+- Deprecated `.modal.small` [9da499f](https://github.com/Spiderpig86/Cirrus/commit/9da499f60e3f3f818cf8ccba628fb89dbcb85727)
 - Deprecating placeholder.scss [39e663b](https://github.com/Spiderpig86/Cirrus/commit/39e663bdc24923073145232e61c7aed7d9c21a5d)
+- Deprecated `.title` and `.subtitle` classes [b07c76d](https://github.com/Spiderpig86/Cirrus/commit/b07c76df0a56520c625c64ddac253838f8665133)
