:wrench: chore: Changelog update, updates to docs for elements pages

--- a/cirrus-docs-next/static/markdown/0.8.0.md
+++ b/cirrus-docs-next/static/markdown/0.8.0.md
@@ -125,6 +125,7 @@
 - Link font weight and color adjustments no longer apply on nested input elements [a6b5e25](https://github.com/Spiderpig86/Cirrus/commit/a6b5e256210d24fc014bad504ddbb85b18959c6a#diff-f6186573c0b149acb95d8b889d6da98865c652fbc2da9fadc20a5edd0c557a6d)
 - Remove background color from avatar when there is a child image element [7d4ea82](https://github.com/Spiderpig86/Cirrus/commit/7d4ea82fe6b5d30862d98e48dab4130ff18f4d46)
 - Fix text color with a tag and `.btn` class [c1c7fa5](https://github.com/Spiderpig86/Cirrus/commit/c1c7fa560c7af168ef31d770b3aaeb04936c5a4a)
+- Remove button shadow on focus for `.btn--disabled` [867eeff](https://github.com/Spiderpig86/Cirrus/commit/867eefff491e0ae4b45173c028ffae676adb840c)
 
 ##### 💥 Breaking Changes
 
