:ledger: docs(0.8.0.md): Update changelog for 0.8.0

--- a/cirrus-docs-next/static/markdown/0.8.0.md
+++ b/cirrus-docs-next/static/markdown/0.8.0.md
@@ -110,6 +110,19 @@
 - Add custom button behaviors for v1 color classes (only apply on button selectors and add hover behavior) [d4a6b6a](https://github.com/Spiderpig86/Cirrus/commit/d4a6b6a73444b04c25f08a2055fd32fda7d04a83)
 - Add cursor util classes [32e0897](https://github.com/Spiderpig86/Cirrus/commit/32e08971cd9e85bc54d070ec46f6a6e36945c95e)
 - Add tooltip--visible class to show tooltips outside of :hover and :focus [9b77f78](https://github.com/Spiderpig86/Cirrus/commit/9b77f7844c6d60bc433f99ca8a02f54ecaf27868)
+- Add new pseudo-variants config with integration to existing class generation [459dbba](https://github.com/Spiderpig86/Cirrus/commit/459dbba4928af89a547b7c9c2a33d27161d536f3)
+
+```scss
+@use "cirrus-ext" with (
+    $config: (
+        pseudo-variants: (
+            CLEARFIX: ('responsive', 'hover', ...),
+            FLEX: ('responsive'),
+            ...
+        ),
+    ),
+);
+```
 
 ##### 🐛 Fixes
 
@@ -141,3 +154,4 @@
 - Deprecated `.modal.small` [9da499f](https://github.com/Spiderpig86/Cirrus/commit/9da499f60e3f3f818cf8ccba628fb89dbcb85727)
 - Deprecating placeholder.scss [39e663b](https://github.com/Spiderpig86/Cirrus/commit/39e663bdc24923073145232e61c7aed7d9c21a5d)
 - Deprecated `.title` and `.subtitle` classes [b07c76d](https://github.com/Spiderpig86/Cirrus/commit/b07c76df0a56520c625c64ddac253838f8665133)
+- Deprecated viewports config in favor of using 'responsive' entry in pseudo-variant config [1f33d83](https://github.com/Spiderpig86/Cirrus/commit/1f33d83c6a559315e81871d423a7f4aa380c3e6d)
