:sparkles: feat(plugins): More plugin doc updates

--- a/cirrus-docs-next/static/markdown/0.8.0.md
+++ b/cirrus-docs-next/static/markdown/0.8.0.md
@@ -44,8 +44,6 @@
   - 'responsive',
   - 'dark', 'light',
   - 'reduce-motion',
-  - 'selection-hover',
-  - 'expand',
   - 'first-of-type',
   - 'last-of-type',
   - 'portrait', 'landscape',
@@ -139,6 +137,7 @@
 - Remove background color from avatar when there is a child image element [7d4ea82](https://github.com/Spiderpig86/Cirrus/commit/7d4ea82fe6b5d30862d98e48dab4130ff18f4d46)
 - Fix text color with a tag and `.btn` class [c1c7fa5](https://github.com/Spiderpig86/Cirrus/commit/c1c7fa560c7af168ef31d770b3aaeb04936c5a4a)
 - Remove button shadow on focus for `.btn--disabled` [867eeff](https://github.com/Spiderpig86/Cirrus/commit/867eefff491e0ae4b45173c028ffae676adb840c)
+- Fix broken tab styles, remove remaining hardcoded colors [#330](https://github.com/Spiderpig86/Cirrus/issues/330) [bfa64c6](https://github.com/Spiderpig86/Cirrus/commit/bfa64c6d0bdd687d3aac4e778530f42c53319cf5)
 
 ##### 💥 Breaking Changes
 
